--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "RochanneLife",
   "short_name": "Life",
- "start_url": "LunoxiLife.html"
+ "start_url": "./LunoxiLife.html"
   "display": "standalone",
   "background_color": "#ffd6e0",
   "theme_color": "#ffd6e0",
@@ -13,4 +13,5 @@
     }
   ]
 }
+
 
